tests/valid/valid_duration_shorthand_week.csl
config DurationWeek {
  two_weeks: duration = 2w;
}
