tests/invalid/invalid_duration_bad_suffix.csl
config InvalidDuration {
  d: duration = 5mm;
}
